--- a/style.css
+++ b/style.css
@@ -1,41 +1,142 @@
-body {
-  background: #e5e5e5;
+.root {
+  --back-lines-in-white: #e6e6f0;
+} /*Tipo variavel global*/
+
+* {
+  /*Para tudo da pagina*/
+  margin: 0;
+  box-sizing: border-box; /*Calculo do tamanho da caixa*/
 }
-body::before {
-  content: "";
-  width: 100%;
-  height: 368px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  background: #121214;
+
+header h1 {
+  font-family: "Archivo", sans-serif;
+  font-weight: bold;
+
+  font-size: 36px;
+  line-height: 42px;
+
+  color: white;
+
+  margin-bottom: 24px;
+}
+body,
+input {
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  background-color: #e5e5e5;
 }
 
 .page {
   width: 736px;
-  margin: auto;
+  margin: 0 auto;
 }
+
 header {
   margin-top: 74px;
   width: 319px;
 }
-header h1 {
-  font-family: "Archivo", sans-serif;
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 42px;
-  color: white;
+
+body::before {
+  /*sub classe, vai fazer antes do body*/
+  content: "";
+  width: 100%;
+  height: 368px;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  z-index: -1; /*Para deixar ele atras, mexe no eixo z no caso*/
+
+  background-color: #121214;
 }
+
 header p {
-  color: #42d3ff;
-  font-family: Poppins;
   font-size: 16px;
   line-height: 26px;
+
+  color: #42d3ff;
 }
+
 form {
+  background-color: #fafafc;
+
   margin-top: 38px;
-  background: #fafafc;
-  min-height: 300px;
+  min-height: 360px;
+
   border-radius: 8px;
+  padding: 64px;
+}
+
+fieldset {
+  border: none;
+}
+.fieldset-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+fieldset legend {
+  font-size: 24px;
+  line-height: 34px;
+
+  font-family: "Archivo", sans-serif;
+  font-style: normal;
+
+  font-weight: 600;
+  width: 100%;
+  border-bottom: 1px solid #e6e6f0;
+
+  padding-bottom: 16px;
+}
+
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.input-wrapper label {
+  color: #4e4958;
+  font-size: 14px;
+  font-style: normal;
+  line-height: 24px; /* 171.429% */
+  margin-bottom: 8px;
+}
+
+.input-wrapper label span {
+  margin-left: 12px;
+  font-size: 12px;
+  line-height: 20px;
+  color:#4e4958;
+}
+
+.input-wrapper input,.input-wrapper textarea {
+  border-radius: 8px;
+
+  background: #fafafc;
+  border: 1px solid #c1bccc;
+  background: var(--shapes-02, #fafafc);
+
+  height: 56px;
+
+  padding: 0 24px;
+  color: #6c6a71;
+
+  font-size: 16px;
+  line-height: 26px; /* 171.429% */
+
+}
+.input-wrapper label span:hover{
+  color: #6c6a71;
+}
+.input-wrapper input::placeholder{
+opacity: 0.7;
+
+}
+.input-wrapper textarea {
+  padding: 0;
+  height: 168px;
+
 }
