--- a/style.css
+++ b/style.css
@@ -66,8 +66,11 @@ form {
   margin-top: 38px;
   min-height: 360px;
 
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0;
   padding: 64px;
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
 }
 
 fieldset {
@@ -97,7 +100,8 @@ fieldset legend {
   flex-direction: column;
 }
 
-.input-wrapper label {
+.input-wrapper label,
+.checkbox-wrapper label {
   color: #4e4958;
   font-size: 14px;
   font-style: normal;
@@ -109,10 +113,12 @@ fieldset legend {
   margin-left: 12px;
   font-size: 12px;
   line-height: 20px;
-  color:#4e4958;
+  color: #4e4958;
 }
 
-.input-wrapper input,.input-wrapper textarea {
+.input-wrapper input,
+.input-wrapper textarea,
+.input-wrapper select {
   border-radius: 8px;
 
   background: #fafafc;
@@ -126,17 +132,88 @@ fieldset legend {
 
   font-size: 16px;
   line-height: 26px; /* 171.429% */
-
 }
-.input-wrapper label span:hover{
+.input-wrapper label span:hover {
   color: #6c6a71;
 }
-.input-wrapper input::placeholder{
-opacity: 0.7;
+.input-wrapper input::placeholder {
+  opacity: 0.7;
+}
+.input-wrapper select {
+  appearance: none;
 
+  -webkit-appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1_54)'%3E%3Cpath d='M8 10L12 14L16 10' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1_54'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-position: right 24px top 50%;
 }
 .input-wrapper textarea {
   padding: 0;
   height: 168px;
+}
+.col-3 {
+  display: flex;
+  gap: 20px;
+}
+.col-3 > div:nth-child(1) {
+  width: 100%;
+}
 
+.checkbox-wrapper label {
+  display: flex;
+  align-items: center;
+  margin: 0%;
+  gap: 16px;
+}
+.checkbox-wrapper {
+  position: relative;
+}
+.checkbox-wrapper input:focus + label::before {
+  outline: 2px solid black;
+}
+.checkbox-wrapper input {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  opacity: 0;
+}
+.checkbox-wrapper label::before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  display: block;
+  border-radius: 8px;
+  border: 1px solid #e6e6f0;
+}
+.checkbox-wrapper input:checked + label::before {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cg clip-path='url(%23clip0_2802_23)'%3E%3Cpath d='M9 16.17L4.83 12L3.41 13.41L9 19L21 7L19.59 5.59L9 16.17Z' fill='%2342D3FF'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_2802_23'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
+}
+
+footer {
+  background: #f0f0f4;
+  height: 136px;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 64px;
+  margin-bottom: 100px;
+  border-top: 1px solid #d6d6d6;
+  border-radius: 0 0 8px 8px;
+}
+footer .button {
+  height: 56px;
+  background: #04d361;
+  border-radius: 8px;
+  color: #fff;
+  font-family: Archivo;
+  font-size: 16px;
+
+  font-weight: 600;
+  line-height: 26px; /* 162.5% */
+  border: 0;
+}
+footer .button:hover {
+  background: #08a04c;
+}
+input:invalid{
+  border: 1px solid red;
 }
